--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,22 +1,21 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/binar_fp
+spring.datasource.url=${SUPABASE_DB_URL}
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=${SUPABASE_DB_PASSWORD}
 spring.datasource.initialization-mode=always
-
+server.address=0.0.0.0
+server.port=8080
 spring.jpa.show-sql=true
-
 spring.jpa.hibernate.ddl-auto=update
 
-server.port = 9090
+
+#server.port = 9090
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-
-spring.mail.username=itsmeforfunbyar@gmail.com
-spring.mail.password=pjbmorswyoospbyn
-
+spring.mail.username=${SMTP_EMAIL}
+spring.mail.password=${SMTP_EMAIL_PASSWORD}
 spring.mail.sender.name=KostHub
-spring.mail.sender.mail=no-reply-@kosthub.com
+spring.mail.sender.mail=no-reply-@test.com
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
@@ -26,3 +25,6 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.security.oauth2.client.registration.google.clientId = ${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.clientSecret = ${GOOGLE_CLIENT_SECRET}
