--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,8 @@ spring.datasource.url=${SUPABASE_DB_URL}
 spring.datasource.username=postgres
 spring.datasource.password=${SUPABASE_DB_PASSWORD}
 spring.datasource.initialization-mode=always
-
+server.address=0.0.0.0
+server.port=8080
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
